<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <!--Четвертый блок-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button7"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/button8"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/button9"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/devide"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="/"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

    <!--Третий блок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/multy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="*"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>


    <!--Второй блок кнопок-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@id/button1"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/button2"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/button3"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/substract"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="-"
            android:textSize="@dimen/number_text_size" />
    </LinearLayout>


    <!--Первый блок-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button0"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/dot"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="."
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/add"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="+"
            android:textSize="@dimen/number_text_size" />

        <Button
            android:id="@+id/eq"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="="
            android:textSize="@dimen/number_text_size"
            android:layout_margin="@dimen/button_margin" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

</LinearLayout>